# kci-dev

./: .gitignore  .kci-dev.toml.example  404.html  CONTRIBUTING.md  Dockerfile  README.md  hugo.toml  index.html  maestro-validate-cron.txt  mkdocs.yml  pyproject.toml  run_maestro_cron.sh  tox.ini
.github/workflows/: arch.yml  black.yml  debian.yml  docs.yml  poetry.yml  pypi-publish.yml  pypi-test.yml
.obs/: workflows.yml
checkout/: index.html
completions/: _kci-dev  kci-dev-completion.bash  kci-dev.fish
debian/: changelog  control  copyright  kci-dev-completions.install  kci-dev.1  kci-dev.manpages  rules
docs/: _index.md  checkout.md  config.md  config_file.md  index.md  issues.md  maestro-coverage.md  maestro-results.md  maestro-validate.md  mcp.md  patchset.md  results.md  testretry.md  validate.md  watch.md
kci-dev/: kci-dev.py
kci-dev/libs/: common.py
kci-dev/subcommands/: checkout.py  commit.py  patch.py  results.py  testretry.py
kcidev/: __init__.py  api.py  main.py
kcidev/_data/: kci-dev.toml.example
kcidev/libs/: common.py  dashboard.py  files.py  filter_options.py  filters.py  git_repo.py  job_filters.py  kcidb.py  maestro_common.py  storage.py
kcidev/mcp/: __init__.py  errors.py  tools_dashboard.py  tools_maestro.py
kcidev/subcommands/: bisect.py  checkout.py  commit.py  config.py  maestro_results.py  mcp.py  patch.py  patchset.py  results.py  storage.py  sub.py  testretry.py  watch.py
kcidev/subcommands/detect/: __init__.py  helper.py  issues.py
kcidev/subcommands/maestro/: __init__.py  results.py
kcidev/subcommands/maestro/validate/: __init__.py  boots.py  builds.py  helper.py
kcidev/subcommands/results/: __init__.py  hardware.py  issues.py  options.py  parser.py
kcidev/subcommands/submit/: __init__.py  options.py
kcidev/subcommands/validate/: __init__.py  boots.py  builds.py  builds_history.py  helper.py
packaging/arch/: .SRCINFO  PKGBUILD
packaging/obs/: kci-dev.spec
results/: index.html
scripts/: check.sh
search/: search_index.json
src/: kcidev.py
src/subcommands/: checkout.py  testretry.py
testretry/: index.html
tests/: test_api.py  test_dashboard.py  test_filters.py  test_kcidb.py  test_kcidev.py  test_libs_and_subcommands_detail.py  test_maestro_common.py  test_maestro_validate_json.py  test_mcp_errors.py  test_mcp_server.py  test_mcp_tools_dashboard.py  test_mcp_tools_maestro.py  test_patchset.py  test_script_coverage.py  test_storage.py  test_testretry.py
