[tool.poetry]
name = "kci-dev"
version = "0.1.2"
description = "Stand alone tool for Linux Kernel developers and maintainers to interact with KernelCI"
authors = ["Arisu Tachibana <arisu.tachibana@miraclelinux.com>"]
license = "LGPL-2.1-or-later"
readme = "README.md"
packages = [
{include = "kcidev", format = ["sdist", "wheel"]},
{include = "subcommands", from="kcidev", format = ["sdist", "wheel"]},
{include = "libs", from="kcidev", format = ["sdist", "wheel"]},
{include = ".kci-dev.toml.example", to="kcidev", format = ["sdist", "wheel"]},
]
repository = "https://github.com/kernelci/kci-dev"
classifiers = [
        'Development Status :: 4 - Beta',
        'Environment :: Console',
        'Intended Audience :: Developers',
        'Operating System :: OS Independent',
        'Topic :: Software Development',
        'Topic :: Software Development :: Libraries',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: Implementation :: CPython',
        'Programming Language :: Python :: Implementation :: PyPy'
    ]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
requests = "^2.32.3"
gitpython = "^3.1.43"
tomli = { version = "^2.2.1", python = "<3.11" }

[tool.poetry.scripts]
kci-dev = 'kcidev.main:run'

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/kernelci/kci-dev/issues"
Documentation = "https://docs.kernelci.org/kci-dev/"
Changelog = "https://github.com/kernelci/kci-dev/releases"

[tool.poetry.group.ci.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
pytest = "^8.3.3"
poethepoet = "^0.29.0"

[tool.poe.tasks]
check = "./scripts/check.sh"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
