[tool.poetry]
name = "kci-dev"
version = "0.1.9"
description = "Stand alone tool for Linux Kernel developers and maintainers to interact with KernelCI"
authors = ["Arisu Tachibana <arisu.tachibana@miraclelinux.com>"]
license = "LGPL-2.1-or-later"
readme = "README.md"
packages = [
{include = "kcidev", format = ["sdist", "wheel"]},
{include = "subcommands", from="kcidev", format = ["sdist", "wheel"]},
{include = "libs", from="kcidev", format = ["sdist", "wheel"]},
]
repository = "https://github.com/kernelci/kci-dev"
classifiers = [
        'Development Status :: 4 - Beta',
        'Environment :: Console',
        'Intended Audience :: Developers',
        'Operating System :: OS Independent',
        'Topic :: Software Development',
        'Topic :: Software Development :: Libraries',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.12',
        'Programming Language :: Python :: 3.13',
        'Programming Language :: Python :: Implementation :: CPython',
        'Programming Language :: Python :: Implementation :: PyPy'
    ]

[tool.poetry.dependencies]
python = "^3.10"
click = ">=8.0.0, <8.3.0" # issue #222
requests = "^2.32.3"
gitpython = "^3.1.43"
tomli = { version = "^2.2.1", python = "<3.11" }
pyyaml = "^6.0.2"
tabulate = "0.9.0"
matplotlib = ">=3.6"
mplcursors = ">=0.6"

[tool.poetry.scripts]
kci-dev = 'kcidev.main:run'

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/kernelci/kci-dev/issues"
Documentation = "https://kci.dev"
Changelog = "https://github.com/kernelci/kci-dev/releases"

[tool.poetry.group.ci.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
pytest = "^8.3.3"
poethepoet = "^0.29.0"
tox = "^4.24.1"

[tool.poe.tasks]
check = "./scripts/check.sh"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
